--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="cart">
     <h2>Cart</h2>
     <ul id="cart"></ul>
-    <p><strong>Total:</strong> $<span id="total">0</span></p>
+    <p><strong>Total:</strong> KESH.<span id="total">0</span></p>
     <form id="checkoutForm">
       <label>Name: <input type="text" name="name" required></label><br><br>
       <label>Email: <input type="email" name="email" required></label><br><br>
