--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Online Shop</title>
+  <title>DEFRA Online Shop</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     .product { border: 1px solid #ccc; padding: 10px; margin: 10px; display: inline-block; width: 200px; }
