--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </script>
 </head>
 <body>
-  <h1>Welcome to My Online Shop</h1>
+  <h1>Welcome to DEFRA Online Shop</h1>
 
   <h3>Accepted Payment</h3>
   <p><strong>M-Pesa:</strong> Send Money - <b>0757603037</b></p>
