--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </head>
 <body>
   <h1>Welcome to DEFRA Online Shop</h1>
-
+  
+<h1>we meet all your shopping needs the fastest,safest, cheapest and trusted way</h1>
   <h3>Accepted Payment</h3>
   <p><strong>M-Pesa:</strong> Send Money - <b>0757603037</b></p>
   <p><strong>Paybill:</strong> Business Number <b>247247</b> | Account <b>0763403580</b></p>
