--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DEFRA Online Shop</title>
+  <title>DEFRA ONLINE SHOP</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     .product { border: 1px solid #ccc; padding: 10px; margin: 10px; display: inline-block; width: 200px; }
@@ -21,7 +21,7 @@
   </script>
 </head>
 <body>
-  <h1>Welcome to DEFRA Online Shop</h1>
+  <h1>Welcome to DEFRA ONLINE SHOP</h1>
   
 <h1>we meet all your shopping needs the fastest,safest, cheapest and trusted way</h1>
   <h3>Accepted Payment</h3>
