--- a/index.html
+++ b/index.html
@@ -3,113 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DEFRA ONLINE SHOP</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    .product { border: 1px solid #ccc; padding: 10px; margin: 10px; display: inline-block; width: 200px; }
-    .cart { margin-top: 20px; border: 1px solid #000; padding: 10px; }
-    button { margin-top: 5px; }
-    .remove { color: red; cursor: pointer; margin-left: 10px; }
-    .category { margin-top: 30px; }
-  </style>
-  <!-- EmailJS SDK -->
+  <title>DEFRA Online Shop</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     (function(){
-      emailjs.init("YOUR_PUBLIC_KEY"); // Replace with your EmailJS Public Key
+      emailjs.init("IOmeyyLIRxx4VEVDi"); // Public Key
     })();
   </script>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f8f8f8; }
+    h1 { text-align: center; color: #333; }
+    .product { border: 1px solid #ccc; background: #fff; padding: 15px; margin: 10px; display: inline-block; width: 200px; text-align: center; border-radius: 10px; }
+    .cart { margin-top: 20px; padding: 15px; border: 1px solid #666; background: #fff; border-radius: 10px; }
+    button { padding: 8px 12px; background: green; color: white; border: none; border-radius: 5px; cursor: pointer; }
+    button.remove { background: red; }
+    .payment-info { margin-top: 20px; background: #e3f9e5; padding: 10px; border: 1px solid #4CAF50; border-radius: 8px; }
+    .error { color: red; font-weight: bold; }
+    .success { color: green; font-weight: bold; }
+  </style>
 </head>
 <body>
-  <h1>Welcome to DEFRA ONLINE SHOP</h1>
-  
-<h1>we meet all your shopping needs the fastest,safest, cheapest and trusted way</h1>
-  <h3>Accepted Payment</h3>
-  <p><strong>M-Pesa:</strong> Send Money - <b>0757603037</b></p>
-  <p><strong>Paybill:</strong> Business Number <b>247247</b> | Account <b>0763403580</b></p>
 
-  <!-- Product Categories -->
-  <div class="category">
-    <h2>Clothing</h2>
-    <div id="clothing"></div>
+  <h1>DEFRA Online Shop</h1>
+
+  <div class="product">
+    <h3>T-shirt</h3>
+    <p>Ksh 800</p>
+    <button onclick="addToCart('T-shirt', 800)">Add to Cart</button>
   </div>
 
-  <div class="category">
-    <h2>Utensils</h2>
-    <div id="utensils"></div>
+  <div class="product">
+    <h3>Cooking Pot</h3>
+    <p>Ksh 1500</p>
+    <button onclick="addToCart('Cooking Pot', 1500)">Add to Cart</button>
   </div>
 
-  <div class="category">
-    <h2>Gadgets</h2>
-    <div id="gadgets"></div>
-  </div>
-
-  <div class="category">
-    <h2>Designers</h2>
-    <div id="designers"></div>
-  </div>
-
-  <div class="category">
-    <h2>Electronics</h2>
-    <div id="electronics"></div>
-  </div>
-
-  <div class="category">
-    <h2>Fashion</h2>
-    <div id="fashion"></div>
-  </div>
-
-  <div class="category">
-    <h2>Kitchen Wear</h2>
-    <div id="kitchen"></div>
+  <div class="product">
+    <h3>Smartphone</h3>
+    <p>Ksh 12500</p>
+    <button onclick="addToCart('Smartphone', 12500)">Add to Cart</button>
   </div>
 
   <div class="cart">
-    <h2>Cart</h2>
-    <ul id="cart"></ul>
-    <p><strong>Total:</strong> Ksh <span id="total">0</span></p>
-    <form id="checkoutForm">
-      <label>Name: <input type="text" name="name" required></label><br><br>
-      <label>Email: <input type="email" name="email" required></label><br><br>
-      <label>Payment Option:
-        <select name="payment" required>
-          <option value="mpesa-send">M-Pesa Send Money (0757603037)</option>
-          <option value="mpesa-paybill">M-Pesa Paybill (247247, Acc: 0763403580)</option>
-          <option value="card">Credit Card</option>
-          <option value="paypal">PayPal</option>
-        </select>
-      </label><br><br>
-      <button type="submit">Place Order</button>
-    </form>
+    <h2>Shopping Cart</h2>
+    <ul id="cart-list"></ul>
+    <p><strong>Total: Ksh <span id="total">0</span></strong></p>
+    <input type="text" id="customerName" placeholder="Your Name"><br><br>
+    <input type="email" id="customerEmail" placeholder="Your Email"><br><br>
+    <button onclick="placeOrder()">Place Order</button>
+    <p id="order-message"></p>
+  </div>
+
+  <div class="payment-info">
+    <h3>Payment Options:</h3>
+    <p><strong>M-Pesa Send Money:</strong> 0757603037</p>
+    <p><strong>Paybill:</strong> 247247</p>
+    <p><strong>Account Number:</strong> 0763403580</p>
   </div>
 
   <script>
-    // Example Products
-    const products = [
-      { id: 1, name: "T-Shirt", price: 800, category: "clothing", image: "https://via.placeholder.com/150" },
-      { id: 2, name: "Cooking Pot", price: 1500, category: "utensils", image: "https://via.placeholder.com/150" },
-      { id: 3, name: "Smartphone", price: 15000, category: "gadgets", image: "https://via.placeholder.com/150" },
-      { id: 4, name: "Designer Handbag", price: 6000, category: "designers", image: "https://via.placeholder.com/150" },
-      { id: 5, name: "TV", price: 25000, category: "electronics", image: "https://via.placeholder.com/150" },
-      { id: 6, name: "Shoes", price: 2000, category: "fashion", image: "https://via.placeholder.com/150" },
-      { id: 7, name: "Blender", price: 3500, category: "kitchen", image: "https://via.placeholder.com/150" }
-    ];
-
     let cart = [];
 
-    function renderProducts() {
-      products.forEach(p => {
-        const div = document.createElement("div");
-        div.className = "product";
-        div.innerHTML = `<img src="${p.image}" width="150"><h3>${p.name}</h3><p>Price: Ksh ${p.price}</p>
-                         <button onclick="addToCart(${p.id})">Add to Cart</button>`;
-        document.getElementById(p.category).appendChild(div);
-      });
-    }
-
-    function addToCart(id) {
-      const product = products.find(p => p.id === id);
-      cart.push(product);
+    function addToCart(product, price) {
+      cart.push({ product, price });
       renderCart();
     }
 
@@ -119,49 +75,54 @@
     }
 
     function renderCart() {
-      const cartUl = document.getElementById("cart");
-      const totalSpan = document.getElementById("total");
-      cartUl.innerHTML = "";
+      const list = document.getElementById("cart-list");
+      list.innerHTML = "";
       let total = 0;
       cart.forEach((item, index) => {
-        const li = document.createElement("li");
-        li.innerHTML = `${item.name} - Ksh ${item.price} <span class="remove" onclick="removeFromCart(${index})">[Remove]</span>`;
-        cartUl.appendChild(li);
+        list.innerHTML += `<li>${item.product} - Ksh ${item.price} 
+          <button class="remove" onclick="removeFromCart(${index})">Remove</button></li>`;
         total += item.price;
       });
-      totalSpan.textContent = total;
+      document.getElementById("total").innerText = total;
     }
 
-    // Checkout Form
-    document.getElementById("checkoutForm").addEventListener("submit", function(e){
-      e.preventDefault();
-      const formData = new FormData(this);
+    function placeOrder() {
+      const name = document.getElementById("customerName").value;
+      const email = document.getElementById("customerEmail").value;
+      const total = document.getElementById("total").innerText;
 
-      let orderDetails = "";
-      cart.forEach(item => { orderDetails += `${item.name} - Ksh ${item.price}\n`; });
+      if (cart.length === 0) {
+        document.getElementById("order-message").innerHTML = "<span class='error'>Your cart is empty!</span>";
+        return;
+      }
+      if (!name || !email) {
+        document.getElementById("order-message").innerHTML = "<span class='error'>Please fill in your details!</span>";
+        return;
+      }
 
-      const templateParams = {
-        customer_name: formData.get("name"),
-        customer_email: formData.get("email"),
-        payment_method: formData.get("payment"),
-        order_list: orderDetails,
-        total_amount: document.getElementById("total").textContent
-      };
+      // Simulate payment verification (basic check)
+      if (total > 0) {
+        // Send email using EmailJS
+        let orderList = cart.map(item => `${item.product} - Ksh ${item.price}`).join(", ");
+        let templateParams = {
+          customer_name: name,
+          customer_email: email,
+          order_list: orderList,
+          total_amount: total,
+          payment_method: "M-Pesa (Paybill or Send Money)"
+        };
 
-      // EmailJS - sends to both admin and customer
-      emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", templateParams)
-        .then(response => {
-          alert("Order placed! Confirmation sent to your email.");
-          cart = [];
-          renderCart();
-          this.reset();
-        }, error => {
-          alert("Failed to send order. Please try again.");
-        });
-    });
-
-    renderProducts();
+        emailjs.send("service_q1wwcea", "template_d68ychp", templateParams)
+          .then(function(response) {
+            document.getElementById("order-message").innerHTML = "<span class='success'>Order placed successfully! Check your email for confirmation.</span>";
+            cart = [];
+            renderCart();
+          }, function(error) {
+            document.getElementById("order-message").innerHTML = "<span class='error'>Payment not confirmed. Please complete payment before order is processed.</span>";
+          });
+      }
+    }
   </script>
+
 </body>
 </html>
-
