--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div id="admin-view" style="display:none">
         <h2 class="pad">Admin • Add / Manage Products</h2>
         <div class="pad" id="admin-lock">
-          <input id="admin-pass" type="password" placeholder="Enter admin password" style="max-width:260px"/>
+          <input id="admin-pass" type="defra123" placeholder="Enter admin password" style="max-width:260px"/>
           <button class="btn" onclick="adminLogin()">Unlock</button>
           <div class="slogan">Tip: change <code>ADMIN_PASSWORD</code> in the script.</div>
         </div>
