--- a/index.html
+++ b/index.html
@@ -300,8 +300,7 @@
         payment_method: payment,
         payment_code: trx,
         notes: notes,
-        order_list: lines.join('
-'),
+        order_list: lines.join(''),
         total_amount: total
       };
 
