--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <option>Designers</option>
                   <option>Electronics</option>
                   <option>Fashion</option>
-                  <option>Kitchen Wear</option>
+                  <option>Kitchen Ware</option>
                 </select>
                 <input id="ptags" placeholder="Tags (comma separated)"/>
                 <input id="pimg" type="file" accept="image/*"/>
