--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <option>Designers</option>
             <option>Electronics</option>
             <option>Fashion</option>
-            <option>Kitchen Wear</option>
+            <option>Kitchen Ware</option>
           </select>
           <button class="btn ghost" onclick="clearFilters()">Clear</button>
         </div>
