--- a/index.html
+++ b/index.html
@@ -368,6 +368,27 @@
 
     // ========= INIT =========
     renderProducts(); renderCart();
+
+    <!-- Contact Section -->
+<section style="background: linear-gradient(135deg, green, yellow); color: #fff; padding: 40px 20px; text-align: center; border-radius: 12px; margin-top: 40px;">
+  <h2 style="font-size: 28px; margin-bottom: 20px;">📞 Contact Us</h2>
+  
+  <p style="font-size: 18px; margin: 8px 0;">
+    <strong>Main Line:</strong> +254 111 513629
+  </p>
+  
+  <p style="font-size: 18px; margin: 8px 0;">
+    <strong>Alternative:</strong> 0784 737231
+  </p>
+  
+  <p style="font-size: 18px; margin: 8px 0;">
+    <strong>Email:</strong> 
+    <a href="mailto:mathewmusyokambuvi@gmail.com" style="color: #004400; font-weight: bold; text-decoration: none;">
+      mathewmusyokambuvi@gmail.com
+    </a>
+  </p>
+</section>
+
   </script>
 </body>
 </html>
