--- a/index.html
+++ b/index.html
@@ -184,7 +184,36 @@
         <div class="pill">Pay by M-Pesa then paste the transaction code above.</div>
         <button class="btn" onclick="placeOrder()">Place Order</button>
         <button class="btn ghost" onclick="exportCsv()">Export CSV</button>
-        <div id="msg" class="slogan"></div>
+        <div id="msg" class="slogan"></div><button class="btn" onclick="placeOrder()">Place Order</button>
+<button class="btn ghost" onclick="exportCsv()">Export CSV</button>
+<div id="msg" class="slogan"></div><!-- ===== CONTACT DETAILS ===== -->
+        <div style="margin-top:20px; background:linear-gradient(135deg, green, yellow); color:#fff; padding:20px; border-radius:16px; text-align:center;">
+  <!-- Logo -->
+  <div style="margin-bottom:12px;">
+    <!-- your SVG logo here --></div>
+
+  <h3 style="margin:0 0 12px 0; font-size:22px;">📞 Contact Us</h3><p style="margin:8px 0; font-size:18px;">
+    📱 <strong>Main Line:</strong>  <a href="tel:+254111513629"style="color:#004400; text-decoration:none; font-weight:bold;">
+      +254111513629
+       </a>
+  </p>
+ <p style="margin:8px 0; font-size:18px;">
+    ☎️ <strong>Alternative:</strong> 
+   <a href="tel:0784737231"style="color:#004400; text-decoration:none; font-weight:bold;">
+      0784 737231
+       </a>
+  </p>
+          <p style="margin:8px 0; font-size:18px;">
+    📧 <strong>Email:</strong> 
+    <a href="Mailto:mathewmusyokambuvi@gmail.com"style="color:#004400; text-decoration:none; font-weight:bold;">
+      mathewmusyokambuvi@gmail.com
+    </a>
+  </p>
+</div>
+          
+  </div>
+
+
       </div>
     </aside>
   </div>
