--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
         <div class="pill">Pay by M-Pesa then paste the transaction code above.</div>
         <button class="btn" onclick="placeOrder()">Place Order</button>
         <button class="btn ghost" onclick="exportCsv()">Export CSV</button>
-        <div id="msg" class="slogan"></div><button class="btn" onclick="placeOrder()">Place Order</button>
-<button class="btn ghost" onclick="exportCsv()">Export CSV</button>
+        <div id="msg" class="slogan"></div>
 <div id="msg" class="slogan"></div><!-- ===== CONTACT DETAILS ===== -->
         <div style="margin-top:20px; background:linear-gradient(135deg, green, yellow); color:#fff; padding:20px; border-radius:16px; text-align:center;">
   <!-- Logo -->
